@@ -16,6 +16,12 @@
         <td>
           <ul>
             <li>
+              You can use
+              <a href="http://redcloth.org/textile" target="_blank">Textile</a>
+              or XHTML for formatting.
+            </li>
+
+            <li>
               To link to another page on this site, use wiki-style links like
               <kbd>[[pagename]]</kbd> or <kbd>[[pagename|link text]]</kbd>.
             </li>
@@ -24,13 +30,6 @@
               To link to a blog post, use a link like
               <kbd>[[@postname_or_id]]</kbd> or
               <kbd>[[@postname_or_id|link text]]</kbd>.
-            </li>
-
-            <li>
-              You can use
-              <a href="http://hobix.com/textile/quick.html" target="_blank">Textile</a>,
-              <a href="http://daringfireball.net/projects/markdown/basics" target="_blank">Markdown</a>,
-              or XHTML for formatting.
             </li>
           </ul>
         </td>
