@@ -70,9 +70,7 @@
       Basic XHTML (including links) is allowed, just don't try anything fishy.
       Your comment will be auto-formatted unless you use your own
       <code>&lt;p&gt;</code> tags for formatting. You're also welcome to use
-      <a href="http://hobix.com/textile/quick.html" target="_blank">Textile</a>
-      or
-      <a href="http://daringfireball.net/projects/markdown/basics" target="_blank">Markdown</a>.
+      <a href="http://redcloth.org/textile" target="_blank">Textile</a>.
     </p>
 
     <p class="noseeum">
